--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,3 +1,5 @@
-<%= @player_1_name %> attacked <%= @player_2_name %>
+<%= @game.player_1.name %> attacked <%= @game.player_2.name %>
 
-<%= @player_2_name %>: <%= @player_2_hp %>HP
+<%= @game.player_1.name %> vs. <%= @game.player_2.name %>
+
+<%= @game.player_2.name %>: <%= @game.player_2.hit_points %>HP
