--- a/views/play.erb
+++ b/views/play.erb
@@ -1,5 +1,5 @@
 <a href = "/attack">Attack</a>
 
-<%= @player_1_name %> vs. <%= @player_2_name %>
+<%= @game.player_1.name %> vs. <%= @game.player_2.name %>
 
-<%= @player_2_name %>: <%= @player_2_hp %>HP
+<%= @game.player_2.name %>: 100HP
