--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,5 +1,9 @@
-<%= @game.player_1.name %> attacked <%= @game.player_2.name %>
+<%= @game.players[0].name %> attacked <%= @game.players[1].name %>
 
 <%= @game.player_1.name %> vs. <%= @game.player_2.name %>
 
+<%= @game.player_1.name %>: <%= @game.player_1.hit_points %>HP
+
 <%= @game.player_2.name %>: <%= @game.player_2.hit_points %>HP
+
+<a href = "/play">End battle</a>
