--- a/views/index.erb
+++ b/views/index.erb
@@ -6,7 +6,7 @@
     <input type="text" name="player_1_name">
   </label>
   <label for="player_2_name">
-    Player 2 names
+    Player 2 name
     <input type="text" name="player_2_name">
   </label>
   <input type="submit" value="Submit">
