--- a/views/play.erb
+++ b/views/play.erb
@@ -2,4 +2,5 @@
 
 <%= @game.player_1.name %> vs. <%= @game.player_2.name %>
 
-<%= @game.player_2.name %>: 100HP
+<%= @game.player_1.name %>: <%= @game.player_1.hit_points %>HP
+<%= @game.player_2.name %>: <%= @game.player_2.hit_points %>HP
