--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,3 +1,7 @@
+<% if @game.game_over %>
+<p> Game over! </p>
+<% end %>
+
 <%= @game.players[0].name %> attacked <%= @game.players[1].name %>
 
 <%= @game.player_1.name %> vs. <%= @game.player_2.name %>
@@ -6,4 +10,6 @@
 
 <%= @game.player_2.name %>: <%= @game.player_2.hit_points %>HP
 
-<a href = "/play">End battle</a>
+
+
+<a href = "/play">End attack</a>
